Testing github pushes are working well or not

--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -64,8 +64,10 @@
 
 {% if section.settings.variation == 'style1' %}
   <section class="hero-section" id="hero_main" style="{{section.settings.hero_main}}">
+  
     <div class="container">
       <h1 class="hero-title">{{ section.settings.title }}</h1>
+      <h2>I am testing github pushes</h2>
       <p class="hero-subtitle">{{ section.settings.subtitle }}</p>
       {% if section.settings.button_link != blank %}
         <a href="{{ section.settings.button_link }}" class="btn btn-primary btn-lg px-5 py-3">{{ section.settings.button_text }}</a>
