--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -16,6 +16,24 @@
       "default": "Voyage By HYPE"
     },
     {
+      "type": "text",
+      "id": "logo_line1",
+      "label": "Logo Line 1",
+      "default": "GLOW"
+    },
+    {
+      "type": "text",
+      "id": "logo_line2",
+      "label": "Logo Line 2",
+      "default": "DECK"
+    },
+    {
+      "type": "checkbox",
+      "id": "two_line_logo",
+      "label": "Use Two-Line Logo",
+      "default": false
+    },
+    {
       "type": "image_picker",
       "id": "logo_image",
       "label": "Logo Image"
@@ -51,7 +69,7 @@
       "type": "color",
       "id": "logo_color",
       "label": "Logo Color",
-      "default": "#FF6B35"
+      "default": "#8B6F47"
     },
     {
       "type": "header",
@@ -129,13 +147,13 @@
       "type": "color",
       "id": "menu_link_color",
       "label": "Menu Link Color",
-      "default": "#333333"
+      "default": "#8B6F47"
     },
     {
       "type": "color",
       "id": "menu_link_hover_color",
       "label": "Menu Link Hover Color",
-      "default": "#FF6B35"
+      "default": "#8B6F47"
     },
     {
       "type": "header",
