Add option to make header bg transparetn

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -221,8 +221,14 @@
     },
     {
       "type": "checkbox",
+      "id": "make_header_transparent",
+      "label": "Make Header Background Transparent",
+      "default": false
+    },
+    {
+      "type": "checkbox",
       "id": "transparent_on_homepage",
-      "label": "Transparent on Homepage",
+      "label": "Transparent on Homepage Only",
       "default": false
     },
     {
